unpackaged/objects/PricebookEntry.object
<CustomObject>
  <fields>
    <fullName>Distributor_price__c</fullName>
    <label>Distributor price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Dummy_Field__c</fullName>
    <label>Dummy Field</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>LocalProductDescription__c</fullName>
    <description>TFUS-000001282</description>
    <label>Local Product Description</label>
    <length>120</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>No_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Contract</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Retail_Price__c</fullName>
    <description>To be filled with the retail price if the Pricebook has wholesale prices</description>
    <label>Retail Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Wholesale_Price__c</fullName>
    <label>Wholesale Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <listViews>
    <fullName>Iberia_Implant_Pricebook_sku</fullName>
    <columns>PRODUCT.NAME</columns>
    <columns>PRODUCT.DEFAULT_PRICE</columns>
    <columns>PRODUCT.ACTIVE</columns>
    <columns>Product2.Article__c</columns>
    <filterScope>Queue</filterScope>
    <label>Iberia Implant Pricebook with sku</label>
    <language>en_US</language>
    <queue>Iberia Implant Price Book</queue>
    <sharedTo>
      <role>IB_CRM_Analyst</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Iberia_Ortho_Pricebook_with_SKU</fullName>
    <columns>Product2.Article__c</columns>
    <columns>PRODUCT.NAME</columns>
    <columns>PRODUCT.DEFAULT_PRICE</columns>
    <columns>PRODUCT.ACTIVE</columns>
    <filterScope>Queue</filterScope>
    <label>Iberia Ortho Pricebook with SKU</label>
    <language>en_US</language>
    <queue>Iberia Ortho Price Book</queue>
    <sharedTo>
      <role>IB_CRM_Analyst</role>
      <role>IB_Shared_Services</role>
    </sharedTo>
  </listViews>
  <validationRules>
    <fullName>Check_market</fullName>
    <active>true</active>
    <description>#3279</description>
    <errorConditionFormula>AND(
TEXT(Pricebook2.Market__c)&lt;&gt; TEXT( $User.Market__c ), TEXT(Pricebook2.Market__c)&lt;&gt; TEXT( $User.User_Country__c ),
$User.Profile__c &lt;&gt; "#System: System Administrator", 
$User.Id &lt;&gt; "00520000001CBYl",
$User.Profile__c &lt;&gt; "#System: OrgFlow",
Product2.RecordType.Id &lt;&gt; '0126M000000R5KX'
)</errorConditionFormula>
    <errorMessage>You cannot edit price book entries that are not connected to your market</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>NotAllowedToAddInPricebook</fullName>
    <active>true</active>
    <errorConditionFormula>Pricebook2.ShowPricingfromMicroServiceOM__c
&amp;&amp;
(Pricebook2.CompanyCode__c != Product2.Company_Code__c
||
text(Pricebook2.SourceId__c) != text(Product2.ERP_Source__c))</errorConditionFormula>
    <errorMessage>This Product is not matching Pricebook Company Code or Source</errorMessage>
  </validationRules>
</CustomObject>